samples/_failures_safe/1761721623_9e6c82_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d2b886b.c: In function ‘main’:
./samples/SAFE/__tmp_7d2b886b.c:142:5: error: expected expression at end of input
  142 |     for (int i = 0; i < 2; i++)
      |     ^~~
./samples/SAFE/__tmp_7d2b886b.c:142:5: error: expected declaration or statement at end of input
